build app as production

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Mitec Network Monitor</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,5 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.de04d8d2cc53ab978546.bundle.js"></script><script type="text/javascript" src="scripts.8763186f26cd0cfb7063.bundle.js"></script><script type="text/javascript" src="main.8049d8d1db2b8a33819b.bundle.js"></script></body>
 </html>
